ido rceipe_ yamal
